# SubscribeWatcher

./: README.md
backend/: alembic.ini  env.py  main.py  requirements  settings.toml
backend/alembic/versions/: 2024-11-24T20-17_initial.py  2025-01-22T17-48_initial.py
backend/app/: app.py
backend/app/tooling/: healthcheck.py  routes.py
backend/app/v1/: app.py
backend/deploy/: docker-compose.yml
backend/libs/api_client/: __init__.py  api_client.py  api_client_impl.py  api_service.py  exceptions.py  models.py  registry.py  transport.py  utils.py
backend/libs/authorize/: schemas.py
backend/libs/cache/: __init__.py  client.py  exceptions.py  healthcheck.py  interface.py  prometheus.py  serializers.py
backend/libs/config/: __init__.py  types.py
backend/libs/database/: __init__.py  config.py  setting_models.py  sql_asyncpg.py
backend/libs/dependencies/: __init__.py  participants.py
backend/libs/health/: __init__.py  checks.py  exceptions.py  registry.py
backend/libs/logging/: __init__.py  config.py  context.py  logger.py  models.py  models_v1.py  utils.py
backend/libs/metrics/: __init__.py  metric.py  prometheus.py
backend/libs/payment_systems/: base.py
backend/libs/shared/: __init__.py  schemas.py
backend/libs/utils/: classes.py  crypt.py  models.py  regexes.py  time.py
backend/libs/web_service/: __init__.py  exception_handlers.py  fast_api.py  (+2 more)
backend/libs/web_service/trace/: __init__.py  pyproject.toml  readme.md  settings.toml  uvicorn.py
backend/libs/web_service/trace/app/: middleware.py  models.py  routes.py  trace_handler.py
(+65 files in other folders)
